# duckchess-server

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml  postgres.sql
common/: Cargo.toml
common/src/: board.rs  clock.rs  elo.rs  lib.rs  piece.rs  play.rs
edge-service/: Cargo.toml  Dockerfile  Rocket.toml  start.sh
edge-service/src/: config.rs  main.rs  play_socket.rs  util.rs
fluvio/: dataflow.yaml
game-service/: Cargo.toml  Dockerfile  start.sh
game-service/src/: main.rs
gameserver/: Cargo.toml
gameserver/src/: game.rs  game_manager.rs  play.rs  player_manager.rs
src/: board.rs  broadcast_manager.rs  cors.rs  game.rs  game_manager.rs  main.rs  piece.rs  play.rs  player_manager.rs  vec2.rs
types/: Cargo.toml
types/src/: board.rs  piece.rs  play.rs  vec2.rs
