[package]
name = "duckchess-edge-service"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
ws = { package = "rocket_ws", version = "0.1.1" }
uuid = { version = "1.17.0", features = ["v7"] }
rand = "0.9.1"
duckchess-common = { path = "../common" }

[dependencies.redis]
# need to use exact version rocket_db_pools uses
version = "0.25.4"
features = ["streams", "aio", "tokio-comp"]

[dependencies.sqlx]
# need to use exact version rocket_db_pools uses
version = "0.7.4"
default-features = false
features = ["macros", "migrate", "time"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres", "deadpool_redis"]
